ikiwiki (2.42) UNRELEASED; urgency=low

  * aggregate: Correct a mistake in the code that dummy up a guid for feeds
    lacking one.
  * inline: Correct handling of urls relative to baseurl in feeds.

 -- Joey Hess <joeyh@debian.org>  Thu, 03 Apr 2008 02:35:39 -0400

ikiwiki (2.41) unstable; urgency=low

  [ Adeodato Simó ]
  * Preprocessor directives generated by the shortcut plugin accept a `desc`
    parameter that overrides the anchor text provided at shortcut definition
    time. (Closes: #458126)

  [ martin f. krafft ]
  * The meta plugin now allows for the robots tag to be specified without the
    risk of it being scrubbed.
  * Let meta.openid set X-XRDS-Location header
  * Make makerepo set the Git merge remote.
    branch.master.remote previously used to default to origin, which has
    recently been changed; it now needs to be set explicitly, which this
    patch does. Closes: #470517
  * meta: Also generate openid2 headers.
  * Handle SimpleXMLRPCDispatcher arg count change in python 2.5
  * Provide XML-RPC proxy abstraction for Python plugins.

  [ Joey Hess ]
  * Add recentchangesdiff plugin that adds diffs to the recentchanges feeds.
  * rcs_diff is a new function that rcs modules should implement.
  * Implemented rcs_diff for git, svn, and tla (tla version untested).
    Mercurial and monotone still todo.
  * Support Text::Markdown::markdown, which is the spelling used by 
    version 1.0.16 of Text::Markdown.
  * Updated Spanish translation from Victor Moral.
  * Fix example exclude regexp. Closes: #469691
  * Remove locking code in git rcs_commit. I'm not sure if this was ever
    correct, and it's certianly not correct now, since the wiki is locked
    before rcs_commit is ever called, and should not be unlocked by
    rcs_commit either.
  * monotone: Require version 0.38 or greater, and stop using the mtnmergerc
    option. (Brian May)
  * Use forcebaseurl to make page previews be displayed with the html base