@@ -41,6 +41,7 @@ together before saving.
 </TMPL_IF>
 <TMPL_VAR FORM-START>
 <TMPL_VAR FIELD-DO>
+<TMPL_VAR FIELD-SID>
 <TMPL_VAR FIELD-FROM>
 <TMPL_VAR FIELD-RCSINFO>
 <TMPL_VAR FIELD-NEWFILE>
